Fix code too big on mobile devices

--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -29,10 +29,17 @@ article h6
 .astro-code
     padding: 0.7em
     border-radius: 1em
-    padding-left: 1.2em
+    // padding-left: 1.2em
+    // padding-right: 1.2em
 
     & *
         font-family: $mono !important
+
+    @include mob
+        max-width: 90vw
+
+.code
+    position: relative
 
 blockquote
     border-left: 0.4em solid rgb(88, 61, 42)
